# gpal

./: .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  pyproject.toml
.claude/skills/update-models/references/: model-update-checklist.md
src/gpal/: __init__.py  git_tools.py  index.py  server.py
tests/: test_agentic.py  test_config.py  test_connectivity.py  test_git_tools.py  test_index.py  test_server.py  test_switching.py  test_tools.py  test_unbundled.py
