[project]
name = "gpal"
version = "0.1.0"
description = "An MCP server providing stateful Gemini access with autonomous codebase exploration"
readme = "README.md"
license = "MIT"
authors = [{ name = "A Tobey", email = "tobert@gmail.com" }]
requires-python = ">=3.12"
keywords = ["mcp", "gemini", "ai", "agent", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.14.4",
    "google-genai>=1.60.0",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[project.scripts]
gpal = "gpal.server:main"

[project.urls]
Homepage = "https://github.com/tobert/gpal"
Repository = "https://github.com/tobert/gpal"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
