[project]
name = "gpal"
version = "0.1.0"
description = "An MCP server providing stateful Gemini access with autonomous codebase exploration"
readme = "README.md"
license = "MIT"
authors = [{ name = "A Tobey", email = "tobert@gmail.com" }]
requires-python = ">=3.12"
keywords = ["mcp", "gemini", "ai", "agent", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "chromadb>=1.4.1",
    "fastmcp>=2.14.4",
    "google-api-core>=2.29.0",
    "google-genai>=1.61.0",
    "mcp[cli]>=1.26.0",
    "pathspec>=1.0.4",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.23"]

[project.scripts]
gpal = "gpal.server:main"

[project.urls]
Homepage = "https://github.com/tobert/gpal"
Repository = "https://github.com/tobert/gpal"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
